--- a/webvideomeeting/css/index.css
+++ b/webvideomeeting/css/index.css
@@ -77,6 +77,9 @@ body {
     justify-content: space-between;
     margin-bottom: 15px;
 }
+#item {
+    display: none;
+}
 
 .vip-item:hover {
     background-color: #F2F2F2;
@@ -107,4 +110,117 @@ body {
 .active {
     background-color: #F2F2F2;
     color: #F59E2C;
+}
+
+
+.btn-pop{
+    background-color: #fff;  
+    border-radius: 10px;
+    border:0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px 15px;
+    cursor: pointer;
+    
+
+}
+.btn-pop1{
+    background-color: #fff;  
+    border-radius: 10px;
+    border:0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px 15px;
+    cursor: pointer;
+
+}
+#background-pop{
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+#div-pop{
+    background:#fff;
+    width:30%;
+    z-index: 1;
+    margin: 12% auto;
+    overflow: auto;
+}
+.div-top{
+    width: 100%;
+    height: auto;
+    background-color: #28a3e7;
+    color: #ffffff;
+}
+.div-top1{
+    width: 100%;
+    height: auto;
+    background-color: #28a3e7;
+    color: #ffffff;
+}
+.div-top div{
+    padding: 3px 5px 5px 8px;
+}
+.div-top1 div{
+    padding: 3px 5px 5px 8px;
+}
+span{
+    color: rgb(10, 9, 9);
+    margin-bottom: 10px ;
+    margin-left: 20px ;
+    cursor: pointer;
+    float: right;
+}
+.div-content{
+    width: auto;
+    height: 200px;
+    overflow: auto;
+}
+.div-content1{
+    width: auto;
+    height: 300px;
+    overflow: auto;
+    margin-left: 20px;
+}
+
+.div-input{
+    width: 150px;
+    margin-top: 80px;
+    margin-left: 50px;
+    overflow: auto;
+}
+.div-footer{
+    text-align: center;
+    background-color: rgb(235, 148, 48);
+    cursor: pointer;
+}
+.div-footer1{
+    text-align: center;
+    background-color: rgb(235, 148, 48);
+    cursor: pointer;
+}
+#background-pop1{
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+#div-pop1{
+    background:#fff;
+    width:35%;
+    z-index: 1;
+    margin: 12% auto;
+    overflow: auto;
+}
+select{
+    width: 200px;
 }
