--- a/webvideomeeting/css/index.css
+++ b/webvideomeeting/css/index.css
@@ -9,6 +9,14 @@ body {
     -webkit-tap-highlight-color: transparent;
 }
 
+.img1 {
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background:no-repeat,center,bottom;
+}
+
 .content {
     display: flex;
     background-color: #fff;
